--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -53,3 +53,13 @@ header {
 
   padding: 5%;
 }
+
+.clase--video .fake-video {
+  height: 80vh;
+  background-color: aqua;
+  z-index: 10;
+  position: sticky;
+  top: 0;
+  left: 0;
+  opacity: 0;
+}
